--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,1 @@
-detectors/yolo11x.pt filter=lfs diff=lfs merge=lfs -text
-detectors/yolo9e.pt filter=lfs diff=lfs merge=lfs -text
-data/KRA-45-170-2023-08-17-evening/1.mp4 filter=lfs diff=lfs merge=lfs -text
-data/KRA-63-247-2023-08-10-morning/1.mp4 filter=lfs diff=lfs merge=lfs -text
+.pt filter=lfs diff=lfs merge=lfs -text
