--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 .pt filter=lfs diff=lfs merge=lfs -text
+detectors/yolov11x.pt filter=lfs diff=lfs merge=lfs -text
+detectors/yolov9e.pt filter=lfs diff=lfs merge=lfs -text
